# eshetcpp

./: .gitmodules  CMakeLists.txt  README.md  flake.nix  format.sh
doc/source/: conf.py  index.rst
include/: eshet.hpp
include/eshet/: callback_thread.hpp  commands.hpp  data.hpp  log.hpp  msgpack_to_string.hpp  parse.hpp  unpack.hpp  util.hpp
src/: CMakeLists.txt  cli.cpp  complete.cpp  eshet_complete.bash  utils.cpp  utils.hpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  test_action.cpp  test_cli.cpp  test_event.cpp  test_msgpack.cpp  test_prop.cpp  test_state.cpp
